--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <h1>IoT GPS Tracker - OpenStreetMap</h1>
     <button onclick="startTracking()">Start Tracking</button>
     <div id="map"></div>
+    <div id="stats">
+        <p id="distance">Distance: 0 km</p>
+        <p id="calories">Calories: 0 kcal</p>
+    </div>
 
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="script.js"></script>
